Changed width on mobile to prevent overflow

--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -64,6 +64,6 @@ p {
 
 @media screen and (max-width: 640px) {
 	.card {
-		width: 90vw;
+		width: 85vw;
 	}
 }
